# Diadem

./: LICENSE  linting_fix_todo.md
AXIOMHIVE/: Cargo.toml  LICENSE  README.md  SECURITY.md  TODO.md  state_history.db
AXIOMHIVE/.github/workflows/: main.yml
AXIOMHIVE/output/1758772371_data_moat_service/src/: main.rs
AXIOMHIVE/src/: convergence_cli.py  main.rs
AXIOMHIVE/src/agents/: cerebrum.py  cerebrum.rs  dagger.py  hadrian.py  hadrian.rs  mod.rs
AXIOMHIVE/src/compiler/: mod.rs
AXIOMHIVE/src/core/: density_protocol.py  flaw_protocol.py  mod.rs  sovereignty.rs  sovereignty_protocol.py
AXIOMHIVE/src/templates/: cargo_template.toml.j2
AXIOMHIVE/tests/: cli.rs  test_convergence.py
